--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Simple Static Site</title>
+  <title>Hello World</title>
 </head>
 <body>
-  <h1>🚀 Hello from Jenkins Deployed Site!</h1>
-  <p>This is a simple static HTML site built with Vite and deployed via Jenkins.</p>
+  <h1>Hello, World!</h1>
 </body>
 </html>
